--- a/passwordmanager/templates/password-generator.html
+++ b/passwordmanager/templates/password-generator.html
@@ -17,9 +17,9 @@
         }
         .active {
             background: #e5e5e5;
-            -webkit-box-shadow: inset 0px 0px 5px #c1c1c1;
-            -moz-box-shadow: inset 0px 0px 5px #c1c1c1;
-            box-shadow: inset 0px 0px 5px #c1c1c1;
+            -webkit-box-shadow: inset 0px 0px 40px #c1c1c1;
+            -moz-box-shadow: inset 0px 0px 40px #c1c1c1;
+            box-shadow: inset 0px 0px 40px #c1c1c1;
             outline: none;
         }
     </style>
@@ -28,10 +28,10 @@
 <body style="background-color: indigo">
 <header>Generate Secure Random Password</header>
 
-<button class="options" id="lowercaseID" value="lowercaseVal" onclick="update(this.value)">Lowercase</button>
-<button class="options" id="uppercaseID" value="uppercaseVal" onclick="update(this.value)">Uppercase</button>
-<button class="options" id="numbersID" value="numbersVal" onclick="update(this.value)">Numbers</button>
-<button class="options" id="specialID" value="specialVal" onclick="update(this.value)">Special (;"&*...)</button>
+<button class="active" id="lowercaseID" value="lowercaseVal" onclick="update(this.value)">Lowercase</button>
+<button class="inactive" id="uppercaseID" value="uppercaseVal" onclick="update(this.value)">Uppercase</button>
+<button class="inactive" id="numbersID" value="numbersVal" onclick="update(this.value)">Numbers</button>
+<button class="inactive" id="specialID" value="specialVal" onclick="update(this.value)">Special (;"&*...)</button>
 <p></p>
 <label for="numCharID">Number of Characters: </label>
 <input type="text" id="numCharID" style="width: 30px" value="12">
@@ -47,21 +47,29 @@
     let specialBool = false
     function update(button) {
         if (button==='lowercaseVal') {
+            if (lowercaseBool===false) {document.getElementById("lowercaseID").classList.add('active');}
+            else {document.getElementById("lowercaseID").classList.remove('active');}
             lowercaseBool=!lowercaseBool;
         }
         if (button==='uppercaseVal') {
+            if (uppercaseBool===false) {document.getElementById("uppercaseID").classList.add('active');}
+            else {document.getElementById("uppercaseID").classList.remove('active');}
             uppercaseBool=!uppercaseBool;
         }
         if (button==='numbersVal') {
+            if (numbersBool===false) {document.getElementById("numbersID").classList.add('active');}
+            else {document.getElementById("numbersID").classList.remove('active');}
             numbersBool=!numbersBool;
         }
         if (button==='specialVal') {
+            if (specialBool===false) {document.getElementById("specialID").classList.add('active');}
+            else {document.getElementById("specialID").classList.remove('active');}
             specialBool=!specialBool;
         }
     }
     function generate() {
         let numCharVar = document.getElementById("numCharID").value;
-        document.getElementById('output').value = lowercaseBool + uppercaseBool + numbersBool + specialBool;
+        document.getElementById('output').value = document.getElementById("lowercaseID").classList;
     }
 </script>
 </body>
