--- a/passwordmanager/templates/password-generator.html
+++ b/passwordmanager/templates/password-generator.html
@@ -8,6 +8,11 @@
             font-family: Arial, serif;
             font-size: 30px;
         }
+        p {
+            font-family: Arial, serif;
+            font-size: 12px;
+            text-align: center;
+        }
         button {
             background: #ededed;
             border: 1px solid #ccc;
@@ -25,52 +30,29 @@
     </style>
 </head>
 
-<body style="background-color: indigo">
-<header>Generate Secure Random Password</header>
-
-<button class="active" id="lowercaseID" value="lowercaseVal" onclick="update(this.value)">Lowercase</button>
-<button class="inactive" id="uppercaseID" value="uppercaseVal" onclick="update(this.value)">Uppercase</button>
-<button class="inactive" id="numbersID" value="numbersVal" onclick="update(this.value)">Numbers</button>
-<button class="inactive" id="specialID" value="specialVal" onclick="update(this.value)">Special (;"&*...)</button>
-<p></p>
-<label for="numCharID">Number of Characters: </label>
-<input type="text" id="numCharID" style="width: 30px" value="12">
-<p></p>
-<button class="generate" onclick="generate()">Generate!</button>
-<p></p>
-<label for="output">Output: </label>
-<input type="text" id="output">
-<script>
-    let uppercaseBool = false
-    let lowercaseBool = true
-    let numbersBool = false
-    let specialBool = false
-    function update(button) {
-        if (button==='lowercaseVal') {
-            if (lowercaseBool===false) {document.getElementById("lowercaseID").classList.add('active');}
-            else {document.getElementById("lowercaseID").classList.remove('active');}
-            lowercaseBool=!lowercaseBool;
-        }
-        if (button==='uppercaseVal') {
-            if (uppercaseBool===false) {document.getElementById("uppercaseID").classList.add('active');}
-            else {document.getElementById("uppercaseID").classList.remove('active');}
-            uppercaseBool=!uppercaseBool;
-        }
-        if (button==='numbersVal') {
-            if (numbersBool===false) {document.getElementById("numbersID").classList.add('active');}
-            else {document.getElementById("numbersID").classList.remove('active');}
-            numbersBool=!numbersBool;
-        }
-        if (button==='specialVal') {
-            if (specialBool===false) {document.getElementById("specialID").classList.add('active');}
-            else {document.getElementById("specialID").classList.remove('active');}
-            specialBool=!specialBool;
-        }
-    }
-    function generate() {
-        let numCharVar = document.getElementById("numCharID").value;
-        document.getElementById('output').value = document.getElementById("lowercaseID").classList;
-    }
-</script>
+<body>
+<div style="position: absolute; top: 20%; left: 30%">
+    <header>Generate Secure Random Password</header>
+    <p></p>
+    <div style="padding-left:6px">
+        <button id="lowercaseID" value="lowercaseVal" onclick="update(this.value)">Lowercase</button>
+        <button id="uppercaseID" value="uppercaseVal" onclick="update(this.value)">Uppercase</button>
+        <button id="numbersID" value="numbersVal" onclick="update(this.value)">Numbers</button>
+        <button id="specialID" value="specialVal" onclick="update(this.value)">Special</button>
+    </div>
+    <p></p>
+    <div style="padding-left:75px">
+        <label for="numCharID">Number of Characters: </label>
+        <input type="text" id="numCharID" style="width: 30px; text-align: end" value="12" required>
+        <button id="btn" style="margin-left: 10px" class="generate" onclick="generate()" onsubmit="generate()">Generate!</button>
+    </div>
+    <p></p>
+    <label for="output">Output: </label>
+    <input type="text" id="output" style="width: 428px">
+    <p id="error"></p>
+</div>
+<script src="/static/password-gen.js"></script>
 </body>
 </html>
+
+<! background no zoom, header position >
