--- a/passwordmanager/templates/password-generator.html
+++ b/passwordmanager/templates/password-generator.html
@@ -11,7 +11,6 @@
         p {
             font-family: Arial, serif;
             font-size: 12px;
-            text-align: center;
         }
         button {
             background: #ededed;
@@ -31,7 +30,7 @@
 </head>
 
 <body>
-<div style="position: absolute; top: 20%; left: 30%">
+<div style="text-align: center">
     <header>Generate Secure Random Password</header>
     <p></p>
     <div style="padding-left:6px">
@@ -51,7 +50,7 @@
     <input type="text" id="output" style="width: 428px">
     <p id="error"></p>
 </div>
-<script src="/static/password-gen.js"></script>
+<script src="/static/js/password-gen.js"></script>
 </body>
 </html>
 
