--- a/password-manager/templates/password-generator.html
+++ b/password-manager/templates/password-generator.html
@@ -3,49 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>BoardLock - Generate Password</title>
-    <style>
-        header {
-            font-family: Arial, serif;
-            font-size: 30px;
-        }
-        p {
-            font-family: Arial, serif;
-            font-size: 12px;
-        }
-        button {
-            background: #ededed;
-            border: 1px solid #ccc;
-            padding: 10px 30px;
-            border-radius: 3px;
-            cursor: pointer;
-        }
-        .active {
-            background: #e5e5e5;
-            -webkit-box-shadow: inset 0px 0px 40px #c1c1c1;
-            -moz-box-shadow: inset 0px 0px 40px #c1c1c1;
-            box-shadow: inset 0px 0px 40px #c1c1c1;
-            outline: none;
-        }
-    </style>
+    <link rel="stylesheet" href="/static/css/password-generator.css">
 </head>
 
 <body>
-<div style="text-align: center">
+<div class="wrapper">
     <header>Generate Secure Random Password</header>
-    <p></p>
-    <div style="padding-left:6px">
+    <div style="padding:5px 0px 5px 6px">
         <button id="lowercaseID" value="lowercaseVal" onclick="update(this.value)">Lowercase</button>
         <button id="uppercaseID" value="uppercaseVal" onclick="update(this.value)">Uppercase</button>
         <button id="numbersID" value="numbersVal" onclick="update(this.value)">Numbers</button>
         <button id="specialID" value="specialVal" onclick="update(this.value)">Special</button>
     </div>
-    <p></p>
-    <div style="padding-left:75px">
+    <div style="padding: 5px 0px 5px 75px">
         <label for="numCharID">Number of Characters: </label>
-        <input type="text" id="numCharID" style="width: 30px; text-align: end" value="12" required>
+        <input type="text" id="numCharID" style="width: 30px; text-align: center" value="12" required>
         <button id="btn" style="margin-left: 10px" class="generate" onclick="generate()" onsubmit="generate()">Generate!</button>
     </div>
-    <p></p>
     <label for="output">Output: </label>
     <input type="text" id="output" style="width: 428px">
     <p id="error"></p>
@@ -53,5 +27,3 @@
 <script src="/static/js/password-gen.js"></script>
 </body>
 </html>
-
-<! background no zoom, header position >
