--- a/password-manager/templates/password-generator.html
+++ b/password-manager/templates/password-generator.html
@@ -9,13 +9,13 @@
 <body>
 <div class="wrapper">
     <header>Generate Secure Random Password</header>
-    <div style="padding:5px 0px 5px 6px">
+    <div style="padding:5px 0 5px 6px">
         <button id="lowercaseID" value="lowercaseVal" onclick="update(this.value)">Lowercase</button>
         <button id="uppercaseID" value="uppercaseVal" onclick="update(this.value)">Uppercase</button>
         <button id="numbersID" value="numbersVal" onclick="update(this.value)">Numbers</button>
         <button id="specialID" value="specialVal" onclick="update(this.value)">Special</button>
     </div>
-    <div style="padding: 5px 0px 5px 75px">
+    <div style="padding: 5px 0 5px 75px">
         <label for="numCharID">Number of Characters: </label>
         <input type="text" id="numCharID" style="width: 30px; text-align: center" value="12" required>
         <button id="btn" style="margin-left: 10px" class="generate" onclick="generate()" onsubmit="generate()">Generate!</button>
