Started signup page

--- a/password-manager/static/css/landing-page.css
+++ b/password-manager/static/css/landing-page.css
@@ -1,5 +1,6 @@
 body {
     font-family: Arial, serif;
+    text-align: center;
     background: lightblue url("/static/images/boardwalk.jpg") no-repeat center center fixed;
     -moz-background-size: cover;
     -webkit-background-size: cover;
@@ -23,13 +24,14 @@ a, button {
     margin: 4px;
     padding: 12px;
     text-align: center;
-    width: -moz-available
+    width: -webkit-fill-available;
+    width: -moz-available;
+    font-size: 15px;
 }
 a:hover, button:hover {
     opacity: 0.8;
 }
 .center{
-    text-align: center;
     width: 1100px;
     margin: 0 auto;
 }
