--- a/password-manager/static/css/password-generator.css
+++ b/password-manager/static/css/password-generator.css
@@ -1,23 +1,32 @@
-header {
+.wrapper header {
     font-size: 20px;
     text-align: center;
 }
-button {
+.wrapper .settings button {
     background: #ededed;
     border: 1px solid #ccc;
     padding: 10px 30px;
     border-radius: 3px;
     cursor: pointer;
     outline: none;
+    font-family: Arial, serif;
 }
 .active {
     background: #e5e5e5;
     -webkit-box-shadow: inset 0px 0px 40px #c1c1c1;
     -moz-box-shadow: inset 0px 0px 40px #c1c1c1;
     box-shadow: inset 0px 0px 40px #c1c1c1;
-    outline: none;
 }
 .wrapper {
     font-family: Arial, serif;
     font-size: 12px;
+}
+.wrapper .show-random {
+    display: inline-block;
+    padding: 1px 1px 1px 1px;
+    font-family: Arial, serif;
+    cursor: pointer;
+    border: none;
+    position: relative;
+    bottom: 1px;
 }
