--- a/password-manager/templates/landing-page.html
+++ b/password-manager/templates/landing-page.html
@@ -14,7 +14,7 @@
     <div class="text-container">
         <p style="font-size: 30px; font-weight: bold">Welcome to BoardLock!</p>
         <p style="font-size: 20px">A secure online password storage solution.</p>
-        <p style="font-size: 15px">(Please do not store real login information, this is an personal project using personal servers.)</p>
+        <p style="font-size: 15px">(Please do not store real login information, this is a personal project using personal servers.)</p>
     </div>
     <div class="img-container"><img alt="background" src="/static/images/landing-page.png"></div>
     <div class="form-container">
