--- a/password-manager/templates/landing-page.html
+++ b/password-manager/templates/landing-page.html
@@ -25,7 +25,8 @@
             <input id="password" type="password" required>
             <button type="submit">Login</button>
         </form>
-        <a href="http://127.0.01:5000/signup" class="button" style="text-decoration: none">Create New Account</a>
+	<! href="http://127.0.0.1:5000/signup" class="button" style="text-decoration: none" Create New Account >
+        <a href="http://3.138.74.49:5000/signup" class="button" style="text-decoration: none">Create New Account</a>
     </div>
 </div>
 </body>
