Configured production server

--- a/password-manager/templates/landing-page.html
+++ b/password-manager/templates/landing-page.html
@@ -26,7 +26,7 @@
             <button type="submit">Login</button>
         </form>
 	<! href="http://127.0.0.1:5000/signup" class="button" style="text-decoration: none" Create New Account >
-        <a href="http://3.138.74.49:5000/signup" class="button" style="text-decoration: none">Create New Account</a>
+        <a href="http://benkofman.com/signup" class="button" style="text-decoration: none">Create New Account</a>
     </div>
 </div>
 </body>
