--- a/password-manager/templates/signup-page.html
+++ b/password-manager/templates/signup-page.html
@@ -7,7 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
         $(function(){
-            $("#password-generator").load("http://3.138.74.49:5000/static/html/password-generator.html");
+            $("#password-generator").load("https://benkofman.com/static/html/password-generator.html");
             //$("#password-generator").load("http://127.0.0.1:5000/static/html/password-generator.html");
         });
     </script>
