--- a/password-manager/static/css/password-generator.css
+++ b/password-manager/static/css/password-generator.css
@@ -12,14 +12,10 @@
     font-family: Arial, serif;
 }
 .active {
-    background: #e5e5e5;
-    -webkit-box-shadow: inset 0px 0px 40px #c1c1c1;
-    -moz-box-shadow: inset 0px 0px 40px #c1c1c1;
-    box-shadow: inset 0px 0px 40px #c1c1c1;
-}
-.wrapper {
-    font-family: Arial, serif;
-    font-size: 12px;
+    background: #858585;
+    -webkit-box-shadow: inset 0px 0px 40px #9a9a9a;
+    -moz-box-shadow: inset 0px 0px 40px #9a9a9a;
+    box-shadow: inset 0px 0px 40px #9a9a9a;
 }
 .wrapper .show-random {
     display: inline-block;
@@ -31,5 +27,10 @@
     bottom: 1px;
 }
 .wrapper {
-    background: rgba(255,255,255,.6);
+    background: #040e9e;
+    border-radius: 10px;
+    font-family: Arial, serif;
+    font-size: 12px;
+    color: white;
+    padding: 5px 0 .1px 0;
 }
