--- a/password-manager/static/css/signup-page.css
+++ b/password-manager/static/css/signup-page.css
@@ -8,7 +8,7 @@ body {
 }
 .signup .top-container {
     margin: 0 auto;
-    width: 520px;
+    text-align: center;
 }
 .signup .form-container {
     font-size: 20px;
@@ -19,8 +19,8 @@ body {
 .signup .random-container {
     padding-top: 25px;
     margin: 0 auto;
-    width: 490px;
-    height: 181px;
+    text-align: center;
+    width: 500px;
 }
 .signup .form-container input {
     width: 300px;
@@ -44,7 +44,7 @@ body {
     font-size: 18px;
     display: inline-block;
     padding: 10px 20px;
-    background-color: #4CAF50;
+    background-color: rgba(0,160,0,1);
     color: white;
     cursor: pointer;
     outline: none;
@@ -78,4 +78,10 @@ body {
 }
 .incomplete {
     color: red;
+}
+.post-error {
+    text-align: center;
+    font-size: 16px;
+    color: red;
+    line-height: 0;
 }
