--- a/password-manager/static/css/signup-page.css
+++ b/password-manager/static/css/signup-page.css
@@ -66,6 +66,7 @@ body {
     text-align: center;
     margin: 0 auto;
     line-height: 6px;
+    font-weight: bold;
 }
 .signup .requirement-container p {
     display: inline-block;
@@ -82,6 +83,5 @@ body {
 .post-error {
     text-align: center;
     font-size: 16px;
-    color: red;
     line-height: 0;
 }
