--- a/password-manager/templates/signup-page.html
+++ b/password-manager/templates/signup-page.html
@@ -7,19 +7,18 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
         $(function(){
-            //$("#password-generator").load("https://benkofman.com/static/html/password-generator.html");
-            $("#password-generator").load("http://127.0.0.1:5000/static/html/password-generator.html");
+            $("#password-generator").load("{{link}}/static/html/password-generator.html");
         });
     </script>
 </head>
 
 <body>
 <div class="signup">
-    <a href="https://benkofman.com" class="button" style="text-decoration: none; text-align: end">Home</a>
+    <a id="home" class="button" style="text-decoration: none; text-align: end">Home</a>
     <div class="post-error"><p>{{error}}</p></div>
     <div class="top-container">
         <div class="form-container">
-            <form action="http://127.0.0.1:5000/signup" id="credentials" method="POST">
+            <form id="credentials" method="POST">
                 <div>
                     <label for="username">Username: </label>
                     <input id="username" type="text" name="username" oninput="validation()" required>
@@ -51,6 +50,10 @@
     </div>
     <div id="password-generator" class="random-container"></div>
     <script src="/static/js/signup-page.js"></script>
+    <script>
+        document.getElementById("credentials").action ="{{link}}/signup";
+        document.getElementById('home').href = "{{link}}";
+    </script>
 </div>
 </body>
 </html>
