--- a/password-manager/templates/signup-page.html
+++ b/password-manager/templates/signup-page.html
@@ -45,7 +45,7 @@
     </div>
     <div class="submit">
         <p>Save your root password in a secure location.</p>
-        <p>Without it, your data will be unrecoverable.</p>
+        <p>Without it, your data will not be able to be decrypted.</p>
         <button id="submitButton" type="submit" form="credentials">Create New Account</button>
     </div>
     <div id="password-generator" class="random-container"></div>
