css, server version management

--- a/password-manager/static/css/password-generator.css
+++ b/password-manager/static/css/password-generator.css
@@ -27,10 +27,12 @@
     bottom: 1px;
 }
 .wrapper {
-    background: #040e9e;
+    background: white;
+    border-color: rgba(0,160,0,1);
     border-radius: 10px;
+    border-width: 3px;
+    border-style: solid;
     font-family: Arial, serif;
     font-size: 12px;
-    color: white;
     padding: 5px 0 .1px 0;
 }
